# servo

./: README.md  README.txt
servo/: CMakeLists.txt
servo/component/: BottomWidget.cpp  BottomWidget.h  DraggableWindow.h  PageWidget.cpp  PageWidget.h  ShadowWidget.cpp  ShadowWidget.h  TopWidget.cpp  TopWidget.h
servo/include/: StrategyFactory.h  mainwindow.h
servo/res/: icons.qrc
servo/src/: StrategyFactory.cpp  main.cpp  mainwindow.cpp
servo/strategies/: MotorSettingsCustomization.cpp  MotorSettingsCustomization.h  PageCustomizationStrategy.h
